# discord-sucks

./: .env  .gitignore  Cargo.toml  test.py
server/: Cargo.toml
server/assets/: register.html
server/sql/: init_messages_db.sql
server/src/: lib.rs  main.rs
server/src/app_objects/: mod.rs  users.rs
server/src/auth/: mod.rs
server/src/auth/authentication/: authentication.rs  mod.rs
server/src/auth/authorization/: authorization.rs  jwt.rs  mod.rs
server/src/auth/jwt/: authorization_extractor.rs  authorization_middleware.rs  claims.rs  extractors.rs  keys.rs  mod.rs  verification.rs
server/src/cloudflare/: ip_adresses.rs  middleware.rs  mod.rs  refresh.rs
server/src/cloudflare/request_origin_verification/: middleware.rs  mod.rs  refresh.rs
server/src/cloudflare/turnstile_verification/: extractor.rs  middleware.rs  mod.rs  state.rs  tests.rs  validation.rs
server/src/configuration/: config.rs  mod.rs
server/src/credentials/: mod.rs  password.rs  password_preparation.rs  tests.rs
server/src/database/: client.rs  client_preparation.rs  mod.rs  redis_preparation.rs
server/src/database/methods/: login.rs  message.rs  message_methods.rs  mod.rs  user.rs
server/src/database/methods/user/: cached.rs  mod.rs  postgres.rs  redis.rs  tests.rs
server/src/database/methods/user/password_and_salt/: cached.rs  mod.rs  postgres.rs  redis.rs  tests.rs
server/src/database/methods/user/refresh_token/: cached.rs  mod.rs  postgres.rs  redis.rs  tests.rs
server/src/database/methods/user/user/: cached.rs  mod.rs  postgres.rs  redis.rs  tests.rs
server/src/email/: email_handler.rs  email_handler_state.rs  mod.rs  tests.rs
server/src/email/email_verification/: email_content.rs  mod.rs  state.rs  verification_jwt.rs
server/src/logs/: mod.rs
server/src/logs/metrics/: mod.rs
server/src/objects/: message.rs  mod.rs  tests.rs
server/src/registration/: mod.rs
server/src/registration/credential_based/: extractor.rs  mod.rs  payload.rs  user_form_for_jwt.rs  user_registration_form.rs
server/src/routes/: authenticate.rs  authorize.rs  mod.rs  refresh_token.rs  secured.rs
server/src/routes/registration/: add_user_from_jwt.rs  api_error.rs  mod.rs  register_user_credential_based.rs  register_user_credentials.rs
server/src/routes/tests/: add_user_from_jwt.rs  authenticate.rs  mod.rs  preparation.rs  refresh_token.rs  register_user_credential_based.rs  secured.rs
server/src/state/: add_user_from_jwt.rs  authentication.rs  mod.rs  refresh.rs  register_user_credential_based.rs
(+16 files in other folders)
