[package]
name = "server"
version = "0.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws", "macros"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["fs", "trace", "cors"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
headers = "0.4.0"
tracing = "0.1.40"
config = { version = "0.14.0", features = ["toml"] }
serde = { version = "1.0.209", features = ["derive"] }
anyhow = "1.0.86"
axum-client-ip = "0.6.0"
ipnetwork = { git = "https://github.com/SildCave/ipnetwork" }
reqwest = { version = "0.12.7", features = ["blocking", "multipart"] }
jsonwebtoken = "9.3.0"
serde_json = "1.0.128"
chrono = { version = "0.4.38", features = ["serde"] }
redis = { version = "0.27.1", features = ["tokio-comp", "ahash"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }
rand = "0.8.5"
log = "0.4.22"
cookie = "0.18.1"
thiserror = "1.0.65"
argon2 = "0.5.3"
uuid = { version = "1.11.0", features = ["v4"] }
lettre = "0.11.10"


[dev-dependencies]
serial_test = "3.1.1"
pretty_assertions = "1.4.1"
tower = { version = "0.5.1", features = ["full"] }
hyper = { version = "1.3.1", features = ["full"] }
